chore: Using java 17